--- a/CameraHackTool/CameraHackTool.csproj
+++ b/CameraHackTool/CameraHackTool.csproj
@@ -29,7 +29,6 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DebugType>portable</DebugType>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
   </PropertyGroup>
 
@@ -38,6 +37,23 @@
     <DebugSymbols>false</DebugSymbols>
     <GenerateDebugInformation>false</GenerateDebugInformation>
     <Optimize>true</Optimize>
+
+    <!-- Alternate to AOT but increases app size. -->
+    <PublishReadyToRun>false</PublishReadyToRun>
+    <!-- WPF BLOCK: PublishTrimmed is implied by native compilation and cannot be disabled. -->
+    <PublishAot>false</PublishAot>
+    <!-- Optimize for Speed over Size. -->
+    <OptimizationPreference>Speed</OptimizationPreference>
+    <!-- WPF BLOCK: WPF does not support trimming yet. -->
+    <PublishTrimmed>false</PublishTrimmed>
+    <!-- WPF BLOCK: Self-containing runtime triples size of app without trimming support. -->
+    <SelfContained>false</SelfContained>
+    <!-- WPF BLOCK: Compression in a single file bundle is only supported when publishing a self-contained app. -->
+    <EnableCompressionInSingleFile>false</EnableCompressionInSingleFile>
+    <!-- Publish the app as a single file. -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <!-- Exclude native libraries from self-extract. -->
+    <IncludeNativeLibrariesForSelfExtract>false</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
 </Project>
